--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
               padding-bottom: 80px;
             }
         </style>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+        <script src="./libs/jquery/1.11.2/jquery.min.js"></script>
     </head>
     <body class="home">
 
